# learn-core

./: .env.example  .gitignore  README.md  alembic.ini  backend_dev.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f6ae674d7b9f_initial_schema.py
backend/: Dockerfile  README.md
backend/app/: ai_entities.py  ai_schemas.py  ai_service.py  config.py  content_index.py  course_entities.py  course_schemas.py  database.py  entities.py  env.py  limits_service.py  llm_provider.py  main.py  minute_limit_service.py  models.py  progress_service.py  rate_limit_entities.py  retrieval.py  schemas.py  security.py  store.py  streaming.py  telegram_auth.py  usage_entities.py
backend/content/: index.json
backend/tests/: test_ai_modes.py  test_alembic_migrations.py  test_auth_sessions.py  test_content_index_validator.py  test_course_content.py  test_course_progress.py  test_frontend_api_compat.py  test_ops_smoke.py  test_password_kdf_policy.py  test_retrieval_contract.py  (+3 more)
docs/: antipatterns.md  benchmark.md  changelog.md  dna-map.md  frontend-api-canonical.md  frontend-state-maps.md  frontend-traceability.md  frontend.md  implementation-checklist.md  issues.md  password-kdf-policy.md  release-readiness.md  runbook.md  spec.md  traceability-frontend.md
frontend/: README.md  eslint.config.js  package-lock.json  package.json
llm_handbook_mvp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  e2e-cases.md  e2e-frontend-cases.md  e2e-priority-matrix.md  e2e-strategy.md  e2e-test-data-contract.md  traceability.md
(+52 files in other folders)
