[project]
name = "llm-handbook-mvp-backend"
version = "0.1.0"
description = "Backend MVP for LLM Handbook"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "argon2-cffi>=23.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
